public/css/cart.css
.container-1-a {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 1rem;
    border-bottom: 1px solid rgba(46, 46, 46, 0.504);
    margin-bottom: 1rem;
}

.cart-a {
    display: none;
    position: fixed;
    right: 0;
    width: 90vh;
    z-index: 999;
    background-color: white;
    height: 100vh;
    padding: 1rem;
    padding-bottom: 10rem;
    box-shadow: 0px 6px 20px 1px rgba(46, 46, 46, 0.527);
    overflow-y: scroll !important;

    animation: cart-a 0.1s ease-in-out;
}

.close-cart-a {
    animation: close-cart-a 0.1s ease-in-out;
}

.cart-a i {
    cursor: pointer;
}

.item-a {
    display: flex;
    align-items: center;
    margin-top: 1rem;
}

.text-a {
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    font-size: 5px;
}

.text-a h4 {
    font-size: 14px;
    margin-left: 1rem;
    font-weight: 400;
}

.text-a h4:nth-child(2) {
    margin-top: 0.8rem;
}

.image-a {
    position: relative;
    width: 50px;
}

.image-a img {
    width: 100%;
    object-fit: cover;
    aspect-ratio: 1/1;
}

.item-a i {
    margin-left: auto;
}

.bottom-buttons-a {
    display: flex;
    flex-direction: column;
    position: fixed;
    bottom: 0;
    width: 84.5vh;
    background-color: white;
    box-shadow: 0px 6px 20px 1px rgba(46, 46, 46, 0.856) inset 0px -6px 20px 1px
        rgba(46, 46, 46, 0.774) inset;
}

.bottom-buttons-a button {
    border: none;
    margin: 0.5rem 0;
    background-color: #121212;
    color: white;
    padding: 0.4rem;
    font-size: 14px;
}

.subtotal-a {
    display: flex;
    justify-content: space-between;
    padding: 1rem 0;
    border-top: 1px solid rgba(46, 46, 46, 0.156);
    border-bottom: 1px solid rgba(46, 46, 46, 0.156);
    margin-bottom: 0.5rem;
}

.subtotal-a h4 {
    font-size: 14px;
    font-weight: 500;
}

.active-a {
    display: block;
}

@media (min-width: 1080px) {
    .cart-a {
        width: 60vh;
    }

    .bottom-buttons-a {
        width: 57.7vh;
    }
}

@media (min-width: 2000px) {
    .cart-a {
        width: 50vh;
    }

    .bottom-buttons-a {
        width: 48vh;
    }
}

@media (max-width: 420px) {
    .cart-a {
        width: 40vh;
    }

    .bottom-buttons-a {
        width: 38vh;
    }
}

#cart-icon-a {
    position: relative;
    cursor: pointer;
}

